pathways are working

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../assets/style.css" />
     <title>Survey Page</title>
   </head>
   
@@ -22,18 +22,18 @@
                 <p class="headerStyle">About You</p>
             </div>
             <div class="form-group">
-              <label for="reserve-name">Name (required)</label>
+              <label for="user-name">Name (required)</label>
               <input type="text" class="form-control" id="name">
             </div>
             <div class="form-group">
-              <label for="reserve-phone">Link to photo image (required)</label>
+              <label for="user-image">Link to photo image (required)</label>
               <input type="text" class="form-control" id="picture">
             </div>
             <hr>
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 1</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -47,7 +47,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 2</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -61,7 +61,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 3</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -75,7 +75,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 4</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -89,7 +89,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 5</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -103,7 +103,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 6</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -117,7 +117,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 7</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -131,7 +131,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 8</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques8" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -145,7 +145,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 9</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques9" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -159,7 +159,7 @@
             <div class="dropdown form-group">
                 <p class="questionStyle">Question 10</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="ques10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Select an option
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -171,8 +171,22 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-lg btn-block submit">Submit</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block submit" id="submitButton">Submit</button>
           </form>
+
+          <div class="modal" tabindex="-1" role="dialog" id="matchModal">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-body" id="showFriend">
+                  <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -180,4 +194,64 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+
+  <script type="text/javascript">
+
+    $(document).ready(function() {
+        $("#submitButton").on("click", function(event) { 
+            event.preventDefault();
+
+            var newUser = {
+                userName: $("#name").val().trim(),
+                userImage: $("#picture").val().trim(),
+                questionnaire: [
+                $("#ques1").val(),
+                $("#ques2").val(),
+                $("#ques3").val(),
+                $("#ques4").val(),
+                $("#ques5").val(),
+                $("#ques6").val(),
+                $("#ques7").val(),
+                $("#ques8").val(),
+                $("#ques9").val(),
+                $("#ques10").val(),        
+                ]
+            };
+
+            $('#matchModal').modal('show');
+        });
+    });
+function findFriend() {
+
+// The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
+$.ajax({ url: "/api/friends", method: "GET" })
+  .then(function(friends) {
+
+    // Here we then log the waitlistData to console, where it will show up as an object.
+    console.log(friends);
+    console.log("------------------------------------");
+
+    // Loop through and display each of the customers
+    for (var i = 0; i < friends.length; i++) {
+        if (friend[i].scores )
+
+      // Get a reference to the waitList element and populate it with tables
+    //   var waitList = $("#waitList");
+
+      // Then display the fields in the HTML (Section Name, Date, URL)
+      var listFriend = $("<li class='list-group-item mt-4'>");
+
+      listFriend.append(
+        // $("<h2>").text("Table #" + (i + 1)),
+        // $("<hr>"),
+        $("<h2>").text("Name: " + friends[i].name),
+        $("<img>").append(friends[i].photo)
+      );
+
+      showFriend.append(listFriend);
+    }
+  });
+}
+       
+  </script>
 </html>
