--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../assets/style.css" />
     <title>Friend Finder</title>
   </head>
   
@@ -24,12 +24,13 @@
             <p class="intro">
                 Then find a friend with the greatest compatability.
             </p>
-            <button type="button" class="btn btn-danger btn-lg">
+            <a href="/survey"><button type="button" class="btn btn-danger btn-lg">
                 Go to Survey
             </button>
+            </a>
         </div>
         <footer>
-            <p id="footerLinks"><span><a href="#">Api Friends List</a></span> | <span><a href="https://github.com/jrbreckenitch/FriendFinder.git">GitHub Repo</a></span></p>
+            <p id="footerLinks"><span><a href="/api/friends">Api Friends List</a></span> | <span><a href="https://github.com/jrbreckenitch/FriendFinder.git">GitHub Repo</a></span></p>
         </footer>
     </div>
     <!-- Optional JavaScript -->
