--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -217,7 +217,7 @@
         // }
             
             console.log(newUser);
-            // $('#matchModal').modal('show');
+            $('#matchModal').modal('show');
 
         $.post("/api/friends", newUser,
         function(data) {
@@ -242,31 +242,19 @@
     });
 function findFriend() {
 
-// The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
 $.ajax({ url: "/api/friends", method: "GET" })
   .then(function(friends) {
-
-    // Here we then log the waitlistData to console, where it will show up as an object.
     console.log(friends);
     console.log("------------------------------------");
 
-    // Loop through and display each of the customers
     for (var i = 0; i < friends.length; i++) {
         if (friend[i].scores)
 
-      // Get a reference to the waitList element and populate it with tables
-    //   var waitList = $("#waitList");
-
-      // Then display the fields in the HTML (Section Name, Date, URL)
       var listFriend = $("<li class='list-group-item mt-4'>");
-
       listFriend.append(
-        // $("<h2>").text("Table #" + (i + 1)),
-        // $("<hr>"),
         $("<h2>").text("Name: " + friends[i].name),
         $("<img>").append(friends[i].photo)
       );
-
       showFriend.append(listFriend);
     }
   });
