--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,23 +17,23 @@
             <p class="headerStyle" id="titleStyle">Survey Questions</p>
         </div>
         <hr>
-        <form role="form">
+        <form action="/api/friends" method="post" role="form">
             <div>
                 <p class="headerStyle">About You</p>
             </div>
             <div class="form-group">
               <label for="user-name">Name (required)</label>
-              <input value="" type="text" class="form-control" id="name">
+              <input name="newUser" value="" type="text" class="form-control" id="name">
             </div>
             <div class="form-group">
               <label for="user-image">Link to photo image (required)</label>
-              <input value="" type="text" class="form-control" id="picture">
+              <input name="newPhoto" value="" type="text" class="form-control" id="picture">
             </div>
             <hr>
             <div>
                 <p>Question 1</p>
                 <p>Your mind is always buzzing with unexplored ideas and plans.</p>
-                <select id="ques1">
+                <select name="question1" id="ques1">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -46,7 +46,7 @@
             <div>
                 <p>Question 2</p>
                 <p>Generally speaking, you rely more on your experience than your imagination.</p>
-                <select id="ques2">
+                <select name="question2" id="ques2">
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -58,7 +58,7 @@
             <div>
                 <p>Question 3</p>
                 <p>You find it easy to stay relaxed and focused even when there is some pressure.</p>
-                <select id="ques3">
+                <select name="question3" id="ques3">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -71,7 +71,7 @@
             <div>
                 <p>Question 4</p>
                 <p>You rarely do something just out of sheer curiosity.</p>
-                <select id="ques4">
+                <select  name="question4" id="ques4">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -84,7 +84,7 @@
             <div>
                 <p>Question 5</p>
                 <p>People can rarely upset you.</p>
-                <select id="ques5">
+                <select name="question5" id="ques5">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -97,7 +97,7 @@
             <div>
                 <p>Question 6</p>
                 <p>It is often difficult for you to relate to other people’s feelings.</p>
-                <select id="ques6">
+                <select  name="question6" id="ques6">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -110,7 +110,7 @@
             <div>
                 <p>Question 7</p>
                 <p>In a discussion, truth should be more important than people’s sensitivities.</p>
-                <select id="ques7">
+                <select name="question7" id="ques7">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -123,7 +123,7 @@
             <div>
                 <p>Question 8</p>
                 <p>You rarely get carried away by fantasies and ideas.</p>
-                <select id="ques8">
+                <select name="question8" id="ques8">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -136,7 +136,7 @@
             <div>
                 <p>Question 9</p>
                 <p>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</p>
-                <select id="ques9">
+                <select name="question9" id="ques9">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -149,7 +149,7 @@
             <div>
                 <p>Question 10</p>
                 <p>You feel more energetic after spending time with a group of people.</p>
-                <select id="ques10">
+                <select name="question10" id="ques10">
                     <option value="">Select an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
                     <option value="2">2</option>
@@ -250,16 +250,16 @@ $.ajax({ url: "/api/friends", method: "GET" })
     for (var i = 0; i < friends.length; i++) {
         if (friend[i].scores)
 
-      var listFriend = $("<li class='list-group-item mt-4'>");
-      listFriend.append(
-        $("<h2>").text("Name: " + friends[i].name),
-        $("<img>").append(friends[i].photo)
-      );
-      showFriend.append(listFriend);
+
+    //   var listFriend = $("<li class='list-group-item mt-4'>");
+    //   listFriend.append(
+    //     $("<h2>").text("Name: " + friends[i].name),
+    //     $("<img>").append(friends[i].photo)
+    //   );
+    //   showFriend.append(listFriend);
     }
   });
-}
-       
+}      
 </script>
 
 <!-- <div value="Select an option" class="dropdown form-group">
